crates/clearhead-cli/tests/snapshots/snapshots_from_examples__calendar_export_example.snap
---
source: crates/clearhead-cli/tests/snapshots_from_examples.rs
expression: actions
---
[
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Daily standup",
    description: Some("Check in with team, discuss blockers"),
    priority: Some(2),
    contexts: Some([
      "Work",
      "Meeting",
    ]),
    planned: Some("2026-01-20T09:00/2026-01-20T09:15"),
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Weekly team retrospective",
    description: Some("Review sprint progress and identify improvements"),
    priority: Some(1),
    contexts: Some([
      "Work",
      "Meeting",
      "Agile",
    ]),
    planned: Some("2026-01-20T16:00/2026-01-20T17:00"),
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Monthly report submission",
    description: Some("Submit monthly status report to management"),
    priority: Some(1),
    contexts: Some([
      "Work",
      "Reports",
      "Admin",
    ]),
    planned: Some("2026-02-01T10:00/2026-02-01T10:30"),
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Quarterly planning",
    description: Some("Strategic planning session for next quarter"),
    priority: Some(1),
    contexts: Some([
      "Work",
      "Planning",
      "Leadership",
    ]),
    planned: Some("2026-04-01T14:00/2026-04-01T16:00"),
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: Some("Strategic-Planning"),
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "First Monday architecture review",
    description: Some("Monthly architecture review with tech leads"),
    priority: Some(2),
    contexts: Some([
      "Work",
      "Architecture",
      "Meeting",
    ]),
    planned: Some("2026-02-03T10:00/2026-02-03T11:30"),
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Weekend planning",
    description: Some("Plan personal tasks for the week ahead"),
    priority: None,
    contexts: Some([
      "Personal",
      "Planning",
    ]),
    planned: Some("2026-01-25T10:00/2026-01-25T10:30"),
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: in_progress,
    name: "In-progress project sync",
    description: Some("Sync on active projects with stakeholders"),
    priority: Some(2),
    contexts: Some([
      "Work",
      "Meeting",
      "Project",
    ]),
    planned: Some("2026-01-22T14:00/2026-01-22T14:45"),
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: Some("Project-Alpha"),
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: blocked,
    name: "Blocked approval meeting",
    description: Some("Waiting on legal approval before proceeding"),
    priority: Some(1),
    contexts: Some([
      "Work",
      "Blocked",
      "Legal",
    ]),
    planned: Some("2026-01-21T11:00/2026-01-21T11:30"),
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: completed,
    name: "Past completed event",
    description: Some("This completed task will be filtered with --open-only"),
    priority: None,
    contexts: Some([
      "Work",
    ]),
    planned: Some("2026-01-15T10:00"),
    due_date: None,
    completed_at: Some("2026-01-15T11:00:00[local-offset]"),
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: cancelled,
    name: "Cancelled event",
    description: Some("Meeting was cancelled due to scheduling conflict"),
    priority: None,
    contexts: Some([
      "Work",
      "Cancelled",
    ]),
    planned: Some("2026-01-18T15:00"),
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
]
