crates/clearhead-cli/tests/snapshots/snapshots_from_examples__conformance_test.snap
---
source: tests/snapshots_from_examples.rs
expression: actions
---
[
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Root action with every field",
    description: Some("This action is used to verify that all metadata is correctly parsed and displayed."),
    priority: Some(1),
    contexts: Some([
      "testing",
      "metadata",
    ]),
    scheduled_at: Some("2026-01-01T09:00:00[local-offset]"),
    duration: Some(60),
    due_date: None,
    completed_at: None,
    created_at: Some("2026-01-03T12:00:00[local-offset]"),
    predecessors: None,
    charter: Some("Conformance-Project"),
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: completed,
    name: "Completed tree (ready for archive)",
    description: None,
    priority: None,
    contexts: None,
    scheduled_at: None,
    duration: None,
    due_date: None,
    completed_at: Some("2026-01-03T11:00:00[local-offset]"),
    created_at: Some("2026-01-03T10:00:00[local-offset]"),
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: completed,
    name: "Completed child",
    description: None,
    priority: None,
    contexts: None,
    scheduled_at: None,
    duration: None,
    due_date: None,
    completed_at: Some("2026-01-03T10:30:00[local-offset]"),
    created_at: Some("2026-01-03T10:05:00[local-offset]"),
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: completed,
    name: "Inconsistent tree (E012 error)",
    description: Some("This parent is completed but has active work below."),
    priority: None,
    contexts: None,
    scheduled_at: None,
    duration: None,
    due_date: None,
    completed_at: Some("2026-01-03T10:00:00[local-offset]"),
    created_at: Some("2026-01-03T09:00:00[local-offset]"),
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Still active",
    description: None,
    priority: None,
    contexts: None,
    scheduled_at: None,
    duration: None,
    due_date: None,
    completed_at: None,
    created_at: Some("2026-01-03T09:05:00[local-offset]"),
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Completed subtasks (E013 nudge)",
    description: Some("Parent is active but all children are done."),
    priority: None,
    contexts: None,
    scheduled_at: None,
    duration: None,
    due_date: None,
    completed_at: None,
    created_at: Some("2026-01-03T08:00:00[local-offset]"),
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: completed,
    name: "Done",
    description: None,
    priority: None,
    contexts: None,
    scheduled_at: None,
    duration: None,
    due_date: None,
    completed_at: Some("2026-01-03T08:10:00[local-offset]"),
    created_at: Some("2026-01-03T08:05:00[local-offset]"),
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Action with derivation test",
    description: Some("This action has no ^ field, so date should be derived from the v7 UUID timestamp."),
    priority: None,
    contexts: None,
    scheduled_at: None,
    duration: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
]
