crates/clearhead-cli/tests/snapshots/snapshots_from_examples__deployment_workflow.snap
---
source: crates/clearhead-cli/tests/snapshots_from_examples.rs
expression: actions
---
[
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Deploy to production",
    description: Some("Monitor logs after deployment"),
    priority: Some(1),
    contexts: Some([
      "Work",
      "DevOps",
      "Critical",
    ]),
    planned: Some("2025-02-15T14:00/2025-02-15T14:30"),
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: Some([
      PredecessorRef(
        raw_ref: "[predecessor_ref]",
      ),
      PredecessorRef(
        raw_ref: "[predecessor_ref]",
      ),
    ]),
    charter: Some("Release Management"),
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Tests passing",
    description: None,
    priority: Some(1),
    contexts: Some([
      "Work",
      "Testing",
    ]),
    planned: Some("2025-02-15T10:00/2025-02-15T11:30"),
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: Some([
      PredecessorRef(
        raw_ref: "[predecessor_ref]",
      ),
    ]),
    charter: Some("Release Management"),
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Code review complete",
    description: None,
    priority: Some(2),
    contexts: Some([
      "Work",
      "CodeReview",
    ]),
    planned: Some("2025-02-15T11:00/2025-02-15T12:00"),
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: Some([
      PredecessorRef(
        raw_ref: "[predecessor_ref]",
      ),
    ]),
    charter: Some("Release Management"),
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "PR submitted",
    description: None,
    priority: Some(3),
    contexts: Some([
      "Work",
    ]),
    planned: Some("2025-02-14T17:00"),
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: Some("Release Management"),
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
]
