crates/clearhead-cli/tests/snapshots/snapshots_from_examples__laundry_workflow.snap
---
source: crates/clearhead-cli/tests/snapshots_from_examples.rs
expression: actions
---
[
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Complete laundry",
    description: None,
    priority: None,
    contexts: Some([
      "Home",
      "Cleaning",
    ]),
    planned: None,
    due_date: None,
    completed_at: None,
    created_at: Some("2026-01-24T17:45"),
    predecessors: None,
    charter: Some("Household Chores"),
    alias: None,
    is_sequential: Some(true),
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Put clothes in hamper",
    description: None,
    priority: None,
    contexts: None,
    planned: None,
    due_date: None,
    completed_at: None,
    created_at: Some("2026-01-24T17:45"),
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Wash clothes",
    description: None,
    priority: None,
    contexts: None,
    planned: None,
    due_date: None,
    completed_at: None,
    created_at: Some("2026-01-24T17:45"),
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Dry clothes",
    description: None,
    priority: None,
    contexts: None,
    planned: None,
    due_date: None,
    completed_at: None,
    created_at: Some("2026-01-24T17:45"),
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Fold clothes",
    description: None,
    priority: None,
    contexts: None,
    planned: None,
    due_date: None,
    completed_at: None,
    created_at: Some("2026-01-24T17:45"),
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Put away clothes",
    description: None,
    priority: None,
    contexts: None,
    planned: None,
    due_date: None,
    completed_at: None,
    created_at: Some("2026-01-24T17:45"),
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
]
