crates/clearhead-cli/tests/snapshots/snapshots_from_examples__minimal.snap
---
source: crates/clearhead-cli/tests/snapshots_from_examples.rs
expression: actions
---
[
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "test",
    description: None,
    priority: None,
    contexts: None,
    planned: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
]
