crates/clearhead-cli/tests/snapshots/snapshots_from_examples__recurring_log_example.snap
---
source: tests/snapshots_from_examples.rs
expression: actions
---
[
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: completed,
    name: "Take out trash",
    description: None,
    priority: None,
    contexts: None,
    scheduled_at: Some("2025-01-07T19:00:00[local-offset]"),
    duration: None,
    due_date: None,
    completed_at: Some("2025-01-07T19:15:00[local-offset]"),
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: completed,
    name: "Take out trash",
    description: None,
    priority: None,
    contexts: None,
    scheduled_at: Some("2025-01-14T19:00:00[local-offset]"),
    duration: None,
    due_date: None,
    completed_at: Some("2025-01-14T19:32:00[local-offset]"),
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: completed,
    name: "Take out trash",
    description: None,
    priority: None,
    contexts: None,
    scheduled_at: Some("2025-01-21T19:00:00[local-offset]"),
    duration: None,
    due_date: None,
    completed_at: Some("2025-01-21T18:45:00[local-offset]"),
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: completed,
    name: "Daily standup",
    description: None,
    priority: None,
    contexts: None,
    scheduled_at: Some("2025-01-20T09:00:00[local-offset]"),
    duration: None,
    due_date: None,
    completed_at: Some("2025-01-20T09:05:00[local-offset]"),
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: completed,
    name: "Daily standup",
    description: None,
    priority: None,
    contexts: None,
    scheduled_at: Some("2025-01-21T09:00:00[local-offset]"),
    duration: None,
    due_date: None,
    completed_at: Some("2025-01-21T09:03:00[local-offset]"),
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: completed,
    name: "Daily standup",
    description: None,
    priority: None,
    contexts: None,
    scheduled_at: Some("2025-01-22T09:00:00[local-offset]"),
    duration: None,
    due_date: None,
    completed_at: Some("2025-01-22T09:07:00[local-offset]"),
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: cancelled,
    name: "Daily standup",
    description: None,
    priority: None,
    contexts: None,
    scheduled_at: Some("2025-01-23T09:00:00[local-offset]"),
    duration: None,
    due_date: None,
    completed_at: Some("2025-01-23T09:00:00[local-offset]"),
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: completed,
    name: "Monthly rent",
    description: None,
    priority: None,
    contexts: None,
    scheduled_at: Some("2025-01-01T00:00:00[local-offset]"),
    duration: None,
    due_date: None,
    completed_at: Some("2025-01-01T10:30:00[local-offset]"),
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
]
