crates/clearhead-cli/tests/snapshots/snapshots_from_examples__recurring_templates.snap
---
source: tests/snapshots_from_examples.rs
expression: actions
---
[
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Take out trash",
    description: None,
    priority: None,
    contexts: None,
    scheduled_at: Some("2025-01-21T19:00:00[local-offset]"),
    duration: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Daily standup",
    description: None,
    priority: None,
    contexts: None,
    scheduled_at: Some("2025-01-20T09:00:00[local-offset]"),
    duration: Some(15),
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Monthly rent",
    description: None,
    priority: None,
    contexts: None,
    scheduled_at: Some("2025-02-01T00:00:00[local-offset]"),
    duration: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Quarterly review",
    description: None,
    priority: None,
    contexts: None,
    scheduled_at: Some("2025-04-01T00:00:00[local-offset]"),
    duration: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Birthday reminder",
    description: None,
    priority: None,
    contexts: None,
    scheduled_at: Some("2025-06-15T00:00:00[local-offset]"),
    duration: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Biweekly newsletter",
    description: None,
    priority: None,
    contexts: None,
    scheduled_at: Some("2025-01-20T10:00:00[local-offset]"),
    duration: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "First Monday of month meeting",
    description: None,
    priority: None,
    contexts: None,
    scheduled_at: Some("2025-02-03T10:00:00[local-offset]"),
    duration: Some(60),
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Last Friday social",
    description: None,
    priority: None,
    contexts: None,
    scheduled_at: Some("2025-01-31T17:00:00[local-offset]"),
    duration: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Weekday medication",
    description: None,
    priority: None,
    contexts: None,
    scheduled_at: Some("2025-01-20T08:00:00[local-offset]"),
    duration: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Water plants",
    description: None,
    priority: None,
    contexts: None,
    scheduled_at: Some("2025-01-20T00:00:00[local-offset]"),
    duration: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
]
